tests/new_explicit_allocator_bad.hop
// Verifies explicit alloc allocator must be a Allocator value or pointer.
fn main() {
	var _p *i32 = alloc i32 in 1
}
